kipi-plugins from trunk (KDE4) :

- Handle non jpeg files to save GPS position. If you use digiKam for KDE4, GPS position is now saved in database for all files, including read-only file formats.
This is want mean than you can geo-tagging your RAW files for example !
- Do not refresh thumbs from digiKam Album GUI interface when something is change in metadata. KDE4 version is more robust and detect automaticly wicth view must be updated in this case...

BUG: 149497
BUG: 145746

CCMAIL: digikam-devel@kde.org


svn path=/trunk/extragear/libs/kipi-plugins/; revision=773841